--- a/Yi-admin/pom.xml
+++ b/Yi-admin/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>Yi-framework</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
